Completed responsive sytling for hero and logo. - Used container query on main element and controlled flex styling/layout with a 720 breakpoint, right after tablet. - Stuck with container-type: normal, was not not working. Fix was switching inline-size (duh). - Still need to work on positiong on of hero::after background image responsive. - Updated Countdown timer cards too. Minor scaling down on xl-phone sizing.

--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -22,6 +22,7 @@
   &__sub-title {
     color: $neutral-500;
     font-size: clamp(1.6rem, 2cqw, 1.8rem);
+    line-height: 160%;
   }
 
   &__right {
@@ -36,5 +37,22 @@
     height: auto;
 
     transform: translateY(2.5vw);
+  }
+}
+
+@container main ( max-width: 720px) {
+  .hero__left {
+    display: flex;
+    flex-direction: column;
+    gap: $spacing-300;
+
+    width: 100%;
+    align-items: center;
+    text-align: center;
+  }
+
+  .hero__right {
+    width: 53%;
+    max-width: 200px;
   }
 }
