--- a/sass/main.css
+++ b/sass/main.css
@@ -119,6 +119,7 @@ section {
 .hero__sub-title {
   color: #747b95;
   font-size: clamp(1.6rem, 2cqw, 1.8rem);
+  line-height: 160%;
 }
 .hero__right {
   width: 42%;
@@ -131,6 +132,20 @@ section {
   transform: translateY(2.5vw);
 }
 
+@container main ( max-width: 720px) {
+  .hero__left {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    width: 100%;
+    align-items: center;
+    text-align: center;
+  }
+  .hero__right {
+    width: 53%;
+    max-width: 200px;
+  }
+}
 .button {
   width: 170px;
   height: 50px;
@@ -305,9 +320,13 @@ section {
   background-color: #fafafa;
 }
 .home-page .logo {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 .home-page .main {
+  container-name: main;
+  container-type: inline-size;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -446,5 +465,15 @@ section {
 @media only screen and (max-width: 26.5em) {
   .home-page .footer {
     height: 1248px;
+  }
+}
+@container main ( max-width: 720px) {
+  .home-page .hero {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 12px;
+  }
+  .home-page .logo {
+    align-items: center;
   }
 }/*# sourceMappingURL=main.css.map */
